<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.com.weatherapp.DetailsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/CurrLocationtvLabel"
        android:id="@+id/textView"
        android:layout_above="@+id/listView1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView"
        android:id="@+id/tectViewCityName" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imageViewIcon"
        android:layout_below="@+id/tectViewCityName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewTemperature"
        android:layout_below="@+id/imageViewIcon"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewCloudsValue"
        android:layout_below="@+id/textViewTemperature"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/MaxTempLabel"
        android:id="@+id/textView4"
        android:layout_below="@+id/textViewCloudsValue"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/MinTempLabel"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewMaxTemp"
        android:layout_below="@+id/textViewCloudsValue"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginTop="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewMinTemp"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginTop="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FeelsLikeLabel"
        android:id="@+id/textView8"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/HumidityLabel"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_toStartOf="@+id/textViewMinTemp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DewpointLabel"
        android:id="@+id/textView10"
        android:layout_below="@+id/textViewHumidity"
        android:layout_toStartOf="@+id/textViewMinTemp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PressureLabel"
        android:id="@+id/textView11"
        android:layout_below="@+id/textViewDewpoint"
        android:layout_toStartOf="@+id/textViewMaxTemp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/CloudsLabel"
        android:id="@+id/textView12"
        android:layout_below="@+id/textViewPressure"
        android:layout_alignEnd="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/WindsLabel"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_toStartOf="@+id/textViewClouds" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageViewLeft"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/arrow_left"
        android:clickable="true" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageViewRight"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/arrow_right"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewFeelsLike"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignStart="@+id/textViewMaxTemp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewHumidity"
        android:layout_below="@+id/textViewFeelsLike"
        android:layout_alignLeft="@+id/textViewMaxTemp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewDewpoint"
        android:layout_below="@+id/textViewHumidity"
        android:layout_alignLeft="@+id/textViewMaxTemp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewPressure"
        android:layout_below="@+id/textViewDewpoint"
        android:layout_alignLeft="@+id/textViewMaxTemp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewWinds"
        android:layout_below="@+id/textViewClouds"
        android:layout_alignStart="@+id/textViewClouds" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewClouds"
        android:layout_below="@+id/textViewPressure"
        android:layout_alignLeft="@+id/textViewMaxTemp" />

</RelativeLayout>
